2020-09-11  Adrian Perez de Castro  <aperez@igalia.com>

        Unreviewed. Update OptionsWPE.cmake and NEWS for the 2.30.0 release

        * wpe/NEWS: Add release notes for 2.30.0

2020-09-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.30.0 release

        * gtk/NEWS: Add release notes for 2.30.0

2020-09-08  Mike Gorse  <mgorse@suse.com>

        [GTK] AcceleratedBackingStoreWayland might erroneously try to use SHM with older wpebackend-fdo
        https://bugs.webkit.org/show_bug.cgi?id=216254

        Reviewed by Adrian Perez de Castro.

        * UIProcess/gtk/AcceleratedBackingStoreWayland.cpp:
        (WebKit::tryInitializeSHM): Return false for wpebackend-fdo < 1.7.0.

2020-09-07  Mike Gorse  <mgorse@suse.com>

        Build failure; cannot find seccomp.h
        https://bugs.webkit.org/show_bug.cgi?id=216226

        Reviewed by Darin Adler.

        No new tests (build fix only).

        * PlatformGTK.cmake: Add LIBSECCOMP_INCLUDE_DIRS to
        WebKit_SYSTEM_INCLUDE_DIRECTORIES.

2020-09-04  Adrian Perez de Castro  <aperez@igalia.com>

        Unreviewed. Update OptionsWPE.cmake and NEWS for the 2.29.91 release

        * wpe/NEWS: Add release notes for the 2.29.91 release.

2020-09-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.29.92 release

        * gtk/NEWS: Add release notes for 2.29.92.

2020-09-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Unexpected User-Agent on redirect
        https://bugs.webkit.org/show_bug.cgi?id=191858

        Reviewed by Youenn Fablet.

        Clear the user agent on new request after a redirect to ensure a new one is computed taking into account the
        quirks if needed. Also ensure quirks are applied for downloads started in the UI process.

        * NetworkProcess/soup/NetworkDataTaskSoup.cpp: